# paperfuse-desktop

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_add_schedule_status.sql  003_fetch_history.sql  004_add_arxiv_id.sql  005_add_classification_cache.sql  006_deep_analysis_v2.sql  007_add_topics.sql  008_add_fts_search.sql  009_add_authors_to_fts.sql  010_add_topics_tags_to_fts.sql  011_add_retry_settings.sql  012_add_papers_to_fetch_history.sql  013_backfill_fetch_history.sql  014_update_authors_with_affiliation.sql  015_fix_nested_authors.sql  016_add_spam_field.sql  017_add_pdf_local_path.sql  018_add_analysis_config.sql  019_add_related_papers.sql  020_add_content_metadata.sql
src-tauri/src/: arxiv.rs  html_parser.rs  latex_parser.rs  lib.rs  llm.rs  llm_cache.rs  logging.rs  main.rs
src-tauri/src/analysis/: blocks.rs  mod.rs  prompt.rs  registry.rs
src-tauri/src/commands/: analysis.rs  collections.rs  fetch.rs  mod.rs  papers.rs  platform.rs  schedule.rs  settings.rs
src-tauri/src/database/: classification_cache.rs  collections.rs  fetch_history.rs  mod.rs  papers.rs  papers.rs.backup  settings.rs
src-tauri/src/fetch/: mod.rs  queue.rs
src-tauri/src/models/: collection.rs  mod.rs  paper.rs  settings.rs
src-tauri/src/retry/: classifier.rs  executor.rs  mod.rs  policy.rs  strategy.rs
src-tauri/tests/: collections_tests.rs  integration_tests.rs
(+123 files in other folders)
